# IntelligentSystems

./: .gitignore  .gitmodules  README.md  pyproject.toml
ANFIS/: ANFIS.py  operators.py
task2-anfis-multiplication/: ANFIS.py  Lab2.ipynb  README.md  lab2.ipynb  operators.py  params.py
task3-tnorms-snorms/: README.md
task4-anfis-genetic-optimization/: README.md
task5-fuzzy-crane-control-sim/: README.md  lab5.ipynb
task6-genetic-anfis-pso/: README.md
task7-fuzzy-numbers-calculator/: README.md  main.py
vrep/: vrep.py
