[project]
name = "intelligentsystems"
version = "0.1.0"
description = ""
authors = [
    {name = "Kuba Podkomórka",email = "jpodkomorka19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
