[project]
name = "intelligentsystems"
version = "0.1.0"
description = ""
authors = [
    {name = "Kuba Podkomórka",email = "jpodkomorka19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook (>=7.3.2,<8.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scikit-fuzzy (>=0.5.0,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"